k8s/fastapi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-recommendation
  namespace: default
spec:
  selector:
    app: api-recommendation
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
